# tensorlib_cpp

./: CMakeLists.txt  README.md  example_usage.h  gradient_checker.h  grud.h  grud_autoencoder_eigen.h  grud_autoencoder_pytorch.py  grud_eigen.h  main.cpp  models.h  practical_examples.h  tensor.h
baseline/: CMakeLists.txt  grud_autoencoder_eigen.h  grud_autoencoder_pytorch.py  grud_eigen.h  main.cpp
core/: checkgrad.h  module.h  tape.h
io/: serialization.h
layers/: basic.h  temporal.h
models/: autoencoder.h
old_0/: autoencoder_eigen.h
old_1/: grud_autoencoder_eigen.h  grud_eigen.h
old_2/: grud_autoencoder_eigen.h
optim/: optimizers.h
testing/: tests.h
training/: trainer.h
utils/: data.h
